
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef unsigned long u_long ;
struct hostent {scalar_t__* h_addr_list; } ;


 unsigned long INADDR_NONE ;
 struct hostent* gethostbyname (char const*) ;
 unsigned long inet_addr (char const*) ;

unsigned long lookupaddress(const char* pchost)
{
 unsigned long nremoteaddr = inet_addr(pchost);

 if (nremoteaddr == INADDR_NONE)
 {
  struct hostent* phe = gethostbyname(pchost);

  if (phe == 0)
   return INADDR_NONE;
  nremoteaddr = *((u_long*)phe->h_addr_list[0]);
 }
 return nremoteaddr;
}
