; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_4247.c_lookupaddress.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_4247.c_lookupaddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i64* }

@INADDR_NONE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @lookupaddress(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.hostent*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @inet_addr(i8* %6)
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @INADDR_NONE, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %26

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call %struct.hostent* @gethostbyname(i8* %12)
  store %struct.hostent* %13, %struct.hostent** %5, align 8
  %14 = load %struct.hostent*, %struct.hostent** %5, align 8
  %15 = icmp eq %struct.hostent* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = load i64, i64* @INADDR_NONE, align 8
  store i64 %17, i64* %2, align 8
  br label %28

18:                                               ; preds = %11
  %19 = load %struct.hostent*, %struct.hostent** %5, align 8
  %20 = getelementptr inbounds %struct.hostent, %struct.hostent* %19, i32 0, i32 0
  %21 = load i64*, i64** %20, align 8
  %22 = getelementptr inbounds i64, i64* %21, i64 0
  %23 = load i64, i64* %22, align 8
  %24 = inttoptr i64 %23 to i64*
  %25 = load i64, i64* %24, align 8
  store i64 %25, i64* %4, align 8
  br label %26

26:                                               ; preds = %18, %1
  %27 = load i64, i64* %4, align 8
  store i64 %27, i64* %2, align 8
  br label %28

28:                                               ; preds = %26, %16
  %29 = load i64, i64* %2, align 8
  ret i64 %29
}

declare dso_local i64 @inet_addr(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
